# fastleaksDF

./: .env.example  .gitignore  README.md  pyproject.toml  run-all.sh  run-dev.sh  setup-db.sql
services/downloader/: main.py
services/extractor/: main.py
services/persister/: main.py
services/scanner/: main.py
services/telegra-listener/: main.py
shared/: config.py  models.py  patterns.py  utils.py
